add masterclasses config switch and content

--- a/frontend/app/views/main.scala.html
+++ b/frontend/app/views/main.scala.html
@@ -4,7 +4,8 @@
 
 <html>
     <head>
-
+        @import views.Config
+        @if(!Config.hideMem){
         <!--
 
              /'\_/`\                   /\ \                          /\ \      __
@@ -16,6 +17,7 @@
                                                                                       \ \_\
                                                                                        \/_/
         -->
+        }
         <meta charset="utf-8">
         <meta name="viewport"                       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
         <meta name="HandheldFriendly"               content="true"/>
