--- a/frontend/app/views/index.scala.html
+++ b/frontend/app/views/index.scala.html
@@ -6,12 +6,7 @@
     @partials.crumb(Seq(Crumb("Home", "/")))
 
     <div class="index page-inner-container">
-        @if(Config.hideMem){
-            <h1 class="section-header">Masterclasses</h1>
-        }else{
-            <h1 class="section-header">Membership</h1>
-        }
-
+        <h1 class="section-header">@if(Config.hideMem){Masterclasses}else{Membership}</h1>
         <ul class="u-unstyled">
             @if(!Config.hideMem){<li><a href="/join">Become a member</a></li>}
             <li><a href="/events">Events</a></li>
