tweaks to markup, tweaks to styles, added padlock.svg

--- a/frontend/app/views/joiner/tier/partner.scala.html
+++ b/frontend/app/views/joiner/tier/partner.scala.html
@@ -29,15 +29,15 @@
 
     <div class="separator"></div>
     <section id="digital" class="joiner-section">
-        <h2 class="section-body-heading">Digital Benefits</h2>
+        <h2 class="section-body-headline">Digital Benefits</h2>
     </section>
 
     <section id="community" class="joiner-section">
-        <h2 class="section-body-heading">Community Benefits</h2>
+        <h2 class="section-body-headline">Community Benefits</h2>
     </section>
 
     <section id="live" class="joiner-section joiner-section--no-border">
-        <h2 class="section-body-heading">Live Benefits</h2>
+        <h2 class="section-body-headline">Live Benefits</h2>
     </section>
 
     <div class="separator"></div>
