--- a/frontend/app/views/partials/joiner/paymentForm.scala.html
+++ b/frontend/app/views/partials/joiner/paymentForm.scala.html
@@ -58,21 +58,35 @@
                 </div>
             </div>
         </fieldset>
+
+        <p class="form-terms">All prices include VAT</p>
+        <p class="form-terms"><img src="@routes.Assets.at("images/padlock.svg")" alt="" class="form-padlock"/> This form is secure</p>
+
     </section>
-    <section class="form-secondary-container">
-        <ul class="u-unstyled">
-            <li>
-                <h2 class="form__heading">What's included</h2>
-                <p>Nunc eget semper nisl. Cras auctor mattis enim, eu pellentesque ante dictum eu. Aliquam vitae laoreet mauris.</p>
-            </li>
-            <li>
-                <h2 class="form__heading">Payments</h2>
-                <p>Aenean et elit eu odio malesuada malesuada ut id odio. Duis at arcu ornare, vehicula ante ut, convallis lacus. Nullam et egestas sem.</p>
-            </li>
-            <li>
-                <h2 class="form__heading">Cancellation</h2>
-                <p>Donec elit nunc, egestas eu suscipit vitae, condimentum quis nibh. Vivamus est ante, commodo sit amet luctus vel, vulputate a eros</p>
-            </li>
-        </ul>
-    </section>
+
 </form>
+
+<section class="form-secondary-container">
+    <ul class="form-detail u-unstyled">
+        <li class="form-detail__item">
+            <h2 class="form__heading">What's included</h2>
+            <ul>
+                <li>Book Live event tickets</li>
+                <li>Watch highlights of Live events</li>
+                <li>Watch stream of Flagship events</li>
+                <li>Early booking for Live events</li>
+                <li>20% discount on tickets and plus ones</li>
+                <li>20% discount on Masterclasses</li>
+            </ul>
+        </li>
+        <li class="form-detail__item">
+            <h2 class="form__heading">Payments</h2>
+            <p><strong>First payment</strong> will be taken today under the name Guardian Membership.</p>
+            <p><strong>Ongoing payments</strong> Your card will be charged £15 every month.  Payments will taken on or shortly after [todays date] of every month.  You can change the payment date at any time.</p>
+        </li>
+        <li class="form-detail__item">
+            <h2 class="form__heading">Changed you mind?</h2>
+            <p>You can cancel your membership at any time by calling our customer support on <a href="tel:080012345678">0800 1234 5678</a></p>
+        </li>
+    </ul>
+</section>
