changed svg to png for IE8 support

--- a/frontend/app/views/partials/joiner/paymentForm.scala.html
+++ b/frontend/app/views/partials/joiner/paymentForm.scala.html
@@ -57,7 +57,7 @@
     </fieldset>
 
     <p class="form-terms">All prices include VAT</p>
-    <p class="form-terms"><img src="@routes.Assets.at("images/padlock.svg")" alt="" class="form-padlock"/> This form is secure</p>
+    <p class="form-terms"><img src="@routes.Assets.at("images/padlock.png")" alt="" class="form-padlock"/> This form is secure</p>
 
 </form>
 
