truncate class added for headings in event list (temp fix for demo)

--- a/frontend/app/views/partials/event/item.scala.html
+++ b/frontend/app/views/partials/event/item.scala.html
@@ -9,7 +9,7 @@
                     <div class="item__image-container">
                         <img src="@event.logo_url" class="responsive-img" alt="Event Image"></div>
                 </div>
-                <h2 class="item__title">
+                <h2 class="item__title truncate">
                     @event.name.text
                 </h2>
             </a>
