--- a/frontend/app/views/partials/header.scala.html
+++ b/frontend/app/views/partials/header.scala.html
@@ -11,7 +11,7 @@
 
         <div class="header__identity">
             <span class="i-action"><span class="i-profile"></span></span>
-            <span class="identity__notice"><a href="http://profile.theguardian.com/signin?returnUrl=mem.theguardian.com">Sign in</a></span>
+            <span class="identity__notice"><a href="https://profile.theguardian.com/signin?returnUrl=mem.theguardian.com">Sign in</a></span>
             <span class="identity__avatar u-h"></span>
             <span class="identity__account u-h"></span>
             <span class="identity__tier u-h"></span>
