--- a/frontend/common/app/assets/stylesheets/pages/_joiner.scss
+++ b/frontend/common/app/assets/stylesheets/pages/_joiner.scss
@@ -142,6 +142,57 @@
     ));
 }
 
+// card types
+.input-cc-num {
+    position: relative;
+    .form__card-type {
+        position: absolute;
+        right: 0px;
+        top: 0;
+        display: inline-block;
+        height: 36px;
+        text-indent: -999px;
+        width: 58px;
+        overflow: hidden;
+        background: url("/assets/images/card_types_sprite.png") transparent no-repeat;
+        display: none;
+
+        &.active {
+            display: block;
+        }
+
+        &.visa {
+            background-position: 1px 0;
+        }
+
+        &.american-express {
+            background-position: -57px 0;
+        }
+
+        &.mastercard {
+            background-position: -115px 0;
+        }
+
+        &.discover {
+            background-position: -219px 0;
+        }
+
+        &.diners-club {
+            background-position: -275px -1px;
+            width: 127px;
+            height: 36px;
+            border: 1px solid #dcdcdc;
+            border-left: none;
+        }
+
+        &.jcb {
+            background-position: -172px -1px;
+            width: 47px;
+            border: 1px solid #dcdcdc;
+            border-left: none;
+        }
+    }
+}
 
 /* ==========================================================================
    Thank You
