--- a/frontend/app/views/main.scala.html
+++ b/frontend/app/views/main.scala.html
@@ -4,8 +4,8 @@
 
 <html>
     <head>
-        @import views.Config
-        @if(!Config.hideMem){
+        @import configuration.Config
+        @if(!Config.membershipHide){
         <!--
 
              /'\_/`\                   /\ \                          /\ \      __
