--- a/frontend/app/views/partials/header.scala.html
+++ b/frontend/app/views/partials/header.scala.html
@@ -1,9 +1,9 @@
-@import views.Config
+@import configuration.Config
 
 <header>
     <div class="header-content gs-container">
 
-        @if(Config.hideMem){
+        @if(Config.membershipHide){
             <a class="header__logo masterclasses" href="/"><img src="@routes.Assets.at("images/masterclasses_mobile.jpg")" alt="" /></a>
         }else{
             <a class="header__logo" href="/"><img src="@routes.Assets.at("images/membership_mobile.png")" alt="" /></a>
