--- a/frontend/app/views/joiner/thankyou/partner.scala.html
+++ b/frontend/app/views/joiner/thankyou/partner.scala.html
@@ -66,7 +66,7 @@
     </section>
 
     <section class="align-center">
-        <a class="action action--inline-text action--join action--wide" href="/">Get Started</a>
+        <a class="action action--inline-text action--join action--wide" href="/events">Get Started</a>
     </section>
 
     <div class="separator"></div>
