--- a/frontend/app/views/joiner/payment/partner.scala.html
+++ b/frontend/app/views/joiner/payment/partner.scala.html
@@ -2,7 +2,7 @@
 
 @main("Membership") {
 
-<div class="page-inner-container">
+<div class="page-container">
     <h1 class="section-headline">Payment</h1>
     @partials.joiner.paymentForm()
 </div>
