--- a/frontend/app/views/joiner/thankyou/partner.scala.html
+++ b/frontend/app/views/joiner/thankyou/partner.scala.html
@@ -3,7 +3,7 @@
 
 @main("Membership") {
 
-<div class="page-inner-container">
+<div class="page-container">
 
     <section class="joiner-section joiner-section--left-aligned joiner-section--no-border">
         <h1 class="section-headline u-text-hyphenate">Thank You</h1>
