--- a/frontend/app/views/joiner/tier/partner.scala.html
+++ b/frontend/app/views/joiner/tier/partner.scala.html
@@ -5,7 +5,7 @@
 @partials.crumb(Seq(Crumb("Home", "/"), Crumb("Become a member", "/join"), Crumb("Become a Partner", "/join/partner")))
 
 
-<div class="page-inner-container">
+<div class="page-container">
 
     <section class="joiner-section joiner-section--left-aligned joiner-section--no-border ">
         <h1 class="section-headline u-text-hyphenate">Purpose/Value</h1>
