--- a/frontend/app/views/joiner/tierList.scala.html
+++ b/frontend/app/views/joiner/tierList.scala.html
@@ -4,7 +4,7 @@
 
 @partials.crumb(Seq(Crumb("Home", "/"), Crumb("Become a member", "/become-a-member")))
 
-<div class="page-inner-container">
+<div class="page-container">
 
     <section class="joiner-section joiner-section--left-aligned joiner-section--no-border ">
         <h1 class="section-headline">Become a member</h1>
