--- a/frontend/app/views/joiner/thankyou/patron.scala.html
+++ b/frontend/app/views/joiner/thankyou/patron.scala.html
@@ -4,7 +4,7 @@
 
 @partials.crumb(Seq(Crumb("Home", "/"), Crumb("Become a member", "/join"), Crumb("Become a Patron", "/join/patron"), Crumb("Patron registration", "/join/patron/payment"), Crumb("Thank you Patron", "/join/patron/thankyou")))
 
-<div class="page-inner-container">
+<div class="page-container">
     <h1 class="section-header">Thanks, you are now a Patron!</h1>
 </div>
 
