--- a/frontend/common/app/assets/stylesheets/layout/_header.scss
+++ b/frontend/common/app/assets/stylesheets/layout/_header.scss
@@ -1,26 +1,23 @@
 header {
-    @include rem((
-        height: 42px
-    ));
+    @include clearfix;
+    padding: 0 0 gs-height(1)/2 0;
     border-bottom: 1px solid $c-neutral6;
     background: $c-neutral8;
 
     .header__logo {
         display: block;
         @include rem((
-            height: 42px
+            height: 42px,
+            margin-top: $gutter * 3
         ));
-//        position: absolute;
-//        right: $gs-gutter;
-//        top: gs-height(1)/2;
         float: right;
     }
 
     .header__identity {
+        background-color: #FFFFFF;
         width: 100%;
         height: 42px;
         display: block;
-        background-color: #FFFFFF;
         padding: 0 0 0 6px;
 
         .i-action {
@@ -56,9 +53,7 @@ header {
     }
 
     @include mq(mobile) {
-        @include rem((
-            height: 108px
-        ));
+        padding: gs-height/2 0;
         .header__logo {
             background: url('/assets/images/membership_tab.png');
             height: 66px;
@@ -70,9 +65,6 @@ header {
                 width: 351px;
             }
 
-            position: absolute;
-            top: 42px;
-            right: 0;
             img {
                 display: none;
             }
@@ -80,14 +72,14 @@ header {
     }
 
     @include mq(tablet) {
-        @include rem((
-            height: 134px
-        ));
 
         .header__logo {
             background: url('/assets/images/membership.png');
             height: 90px;
             width: 301px;
+            @include rem((
+                margin-top: 0
+            ));
 
             &.masterclasses {
                 background: url('/assets/images/masterclasses.jpg');
@@ -97,9 +89,6 @@ header {
         }
 
         .header__identity {
-            position: absolute;
-            top: gs-height(1)/2;
-            left: 0;
             background: none;
             span {
                 @include fs-data(4);
