centering of the breadcrumb

--- a/frontend/common/app/assets/stylesheets/components/_crumb.scss
+++ b/frontend/common/app/assets/stylesheets/components/_crumb.scss
@@ -1,7 +1,12 @@
 .breadcrumb {
-    margin: $gutter 0;
+    margin: $gutter auto;
     height: 24px;
     display: none;
+    @include clearfix;
+    position: relative;
+    @include rem((
+        max-width: 1140px
+    ));
 
     @include mq(tablet) {
         display: block;
