first cut of date suffix for a day (th, nd, rd, st) work

--- a/frontend/app/views/partials/joiner/paymentForm.scala.html
+++ b/frontend/app/views/partials/joiner/paymentForm.scala.html
@@ -79,7 +79,7 @@
         <li class="form-detail__item">
             <h2 class="form__heading">Payments</h2>
             <p><strong>First payment</strong> will be taken today under the name Guardian Membership.</p>
-            <p><strong>Ongoing payments</strong> Your card will be charged £15 every month.  Payments will taken on or shortly after 27th of every month.  You can change the payment date at any time.</p>
+            <p><strong>Ongoing payments</strong> Your card will be charged £15 every month.  Payments will taken on or shortly after @todayDay of every month.  You can change the payment date at any time.</p>
         </li>
         <li class="form-detail__item">
             <h2 class="form__heading">Changed you mind?</h2>
