Use Tier enum in templates

--- a/frontend/app/views/joiner/payment/paymentForm.scala.html
+++ b/frontend/app/views/joiner/payment/paymentForm.scala.html
@@ -1,7 +1,6 @@
-@(tier: String)
+@(tier: model.Tier.Tier)
 
 @import views.html.joiner.payment.selectDates
-@import views.Dates._
 
 @main("Membership") {
 
