--- a/frontend/app/views/partials/joiner/paymentAside.scala.html
+++ b/frontend/app/views/partials/joiner/paymentAside.scala.html
@@ -1,4 +1,4 @@
-@(tier: String)
+@(tier: model.Tier.Tier)
 
 <aside class="form-secondary-container">
     <ul class="form-detail u-unstyled">
@@ -8,7 +8,7 @@
                 @* Benefits List per tier *@
 
                 @tier match {
-                    case "friend" => {
+                    case model.Tier.Friend => {
                         <li>Book Live event tickets</li>
                         <li>Watch highlights of Live events</li>
                         <li>Watch stream of Flagship events</li>
@@ -16,7 +16,7 @@
                         <li>20% discount on tickets and plus ones</li>
                         <li>20% discount on Masterclasses</li>
                     }
-                    case "partner" => {
+                    case model.Tier.Partner => {
                         <li>Book Live event tickets</li>
                         <li>Watch highlights of Live events</li>
                         <li>Watch stream of Flagship events</li>
@@ -24,7 +24,7 @@
                         <li>20% discount on tickets and plus ones</li>
                         <li>20% discount on Masterclasses</li>
                     }
-                    case "patron" => {
+                    case model.Tier.Patron => {
                         <li>Book Live event tickets</li>
                         <li>Watch highlights of Live events</li>
                         <li>Watch stream of Flagship events</li>
