--- a/frontend/app/views/joiner/tier/friend.scala.html
+++ b/frontend/app/views/joiner/tier/friend.scala.html
@@ -4,11 +4,63 @@
 
 @partials.crumb(Seq(Crumb("Home", "/"), Crumb("Become a member", "/join"), Crumb("Become a Friend", "/join/friend")))
 
-
 <div class="page-container">
 
-    <h1 class="section-header">Friend Tier</h1>
+    <section class="joiner-section joiner-section--left-aligned joiner-section--no-border ">
+        <h1 class="section-headline u-text-hyphenate">Purpose/Value</h1>
+        <h2 class="section-sub-headline u-text-hyphenate">Friend Free</h2>
+        <p><a class="action action--inline-text action--join" href="/join/friend/thankyou">Join</a><a href="#whats-included" class="hidden-mobile">Whats Included</a></p>
+    </section>
+
+    <section class="joiner-navigation hidden-mobile">
+        <ul class="u-unstyled">
+            <li class="joiner-navigation__tab inline-list__item">
+                <a href="#digital" class="joiner-navigation__btn">Digital</a>
+            </li>
+            <li class="joiner-navigation__tab inline-list__item">
+                <a href="#community" class="joiner-navigation__btn">Community</a>
+            </li>
+            <li class="joiner-navigation__tab inline-list__item">
+                <a href="#live" class="joiner-navigation__btn">Live</a>
+            </li>
+        </ul>
+    </section>
+
+    <div class="separator"></div>
+    <section id="digital" class="joiner-section">
+        <h2 class="section-body-headline">Digital Benefits</h2>
+    </section>
+
+    <section id="community" class="joiner-section">
+        <h2 class="section-body-headline">Community Benefits</h2>
+    </section>
+
+    <section id="live" class="joiner-section joiner-section--no-border">
+        <h2 class="section-body-headline">Live Benefits</h2>
+    </section>
+
+    <div class="separator"></div>
+    <section id="whats-included">
+        <h2>Whats Included</h2>
+        <ul class="benefits u-unstyled">
+            <li class="benefits-list">
+                <span class="benefits-list__item">Digital</span>
+            </li>
+            <li class="benefits-list">
+                <span class="benefits-list__item">Community</span>
+            </li>
+            <li class="benefits-list">
+                <span class="benefits-list__item">Live</span>
+            </li>
+            <li class="benefits-list benefits-list--left-aligned">
+                <span class="benefits-list__item">Friend Free
+                    <a class="action action--join" href="/join/friend/thankyou">Join</a>
+                </span>
+            </li>
+        </ul>
+    </section>
 
 </div>
+
 
 }
