tweaks to markup from david

--- a/frontend/app/views/joiner/tier/patron.scala.html
+++ b/frontend/app/views/joiner/tier/patron.scala.html
@@ -9,7 +9,7 @@
 
     <section class="joiner-section joiner-section--left-aligned joiner-section--no-border ">
         <h1 class="section-headline u-text-hyphenate">Purpose/Value</h1>
-        <h2 class="section-sub-headline u-text-hyphenate">Patron £60</h2>
+        <h2 class="section-sub-headline u-text-hyphenate">Patron &#163;60</h2>
         <p><a class="action action--inline-text action--join" href="/join/patron/payment">Join</a><a href="#whats-included" class="hidden-mobile">Whats Included</a></p>
     </section>
 
