--- a/frontend/app/views/joiner/thankyou/partner.scala.html
+++ b/frontend/app/views/joiner/thankyou/partner.scala.html
@@ -1,3 +1,5 @@
+@(subscription: model.Stripe.Subscription, card: model.Stripe.Card)
+
 @import views.Crumb
 @import views.Dates._
 
@@ -11,7 +13,7 @@
         </p>
     </section>
 
-    @partials.joiner.thankyou.paymentSummary()
+    @partials.joiner.thankyou.paymentSummary(subscription, card)
 
     <section class="align-center">
         <a class="action action--inline-text action--join action--wide" href="/events">Get Started</a>
