--- a/frontend/common/app/assets/stylesheets/pages/_joiner.scss
+++ b/frontend/common/app/assets/stylesheets/pages/_joiner.scss
@@ -110,93 +110,76 @@
     ));
 }
 
-// card types
-.input-cc-num {
-    position: relative;
-    .form__card-type {
-        position: absolute;
-        right: 0px;
-        display: inline-block;
-        height: 39px;
-        text-indent: -999px;
-        width: 63px;
-        overflow: hidden;
-        background: url("/assets/images/card_types_sprite_mobile.png") transparent no-repeat;
-        display: none;
+/* ==========================================================================
+   Stripe credit card types
+   ========================================================================== */
 
-        &.active {
-            display: block;
-        }
+.credit-card {
+    background: transparent url("/assets/images/card_types_sprite.png") 200% 0 no-repeat;
+}
 
-        &.visa {
-            background-position: 1px 0;
-        }
+.credit-card--inline-block {
+    width: 49px;
+    height: 36px;
+    display: inline-block;
+    vertical-align: middle;
+}
 
-        &.american-express {
-            background-position: -62px 0;
-        }
+.credit-card--visa {
+    background-position: 99.4% 0;
+}
 
-        &.mastercard {
-            background-position: -125px 0;
-        }
+.credit-card--mastercard {
+    background-position: 99.4% -36px;
+}
 
-        &.discover {
-            background-position: -237px 0;
-        }
+.credit-card--american-express {
+    background-position: 99.4% -71px;
+}
 
-        &.diners-club {
-            background-position: -299px -1px;
-            width: 144px;
-            height: 39px;
-            border: 1px solid #dcdcdc;
-            border-left: none;
-        }
+.credit-card--discover {
+    background-position: 99.4% -107px;
+}
 
-        &.jcb {
-            background-position: -187px -1px;
-            width: 51px;
-            border: 1px solid #dcdcdc;
-            border-left: none;
-        }
+.credit-card--diners-club {
+    background-position: 99.4% -144px;
+}
 
-        @include mq(tablet){
-            height: 36px;
-            width: 58px;
-            background: url("/assets/images/card_types_sprite.png") transparent no-repeat;
+.credit-card--jcb {
+    background-position: 99.4% -180px;
+}
 
-            &.american-express {
-                background-position: -57px 0;
-            }
+@include mq(tablet){
 
-            &.mastercard {
-                background-position: -115px 0;
-            }
+    .credit-card--visa {
+        background-position: 99.8% -1px;
+    }
 
-            &.discover {
-                background-position: -219px 0;
-            }
+    .credit-card--mastercard {
+        background-position: 99.8% -37px;
+    }
 
-            &.diners-club {
-                background-position: -275px -1px;
-                width: 127px;
-                height: 36px;
-            }
+    .credit-card--american-express {
+        background-position: 99.8% -73px;
+    }
 
-            &.jcb {
-                background-position: -172px -1px;
-                width: 47px;
-            }
-        }
+    .credit-card--discover {
+        background-position: 99.8% -109px;
+    }
+
+    .credit-card--diners-club {
+        background-position: 99.8% -145px;
+    }
+
+    .credit-card---jcb {
+        background-position: 99.8% -181px;
     }
 }
+
 
 /* ==========================================================================
    Thank You
    ========================================================================== */
-
-.credit-card-provider {
-    vertical-align: middle;
-}
 
 .questions {
   @include clearfix;
